@@ -1,3 +1,5 @@
+  - Skip non-primary modules in a file to ensure we generate a sane fatpack
+
 0.003004 - 2014-10-04
   - Explicitly load Moo::HandleMoose::_TypeMap since it isn't loaded sans
     ithreads but we don't know if the foreign perl requires it
